# OWNd

./: .gitignore  README.md  pyproject.toml  setup.py
OWNd/: __init__.py  __main__.py  connection.py  message.py
